--- a/css/style.css
+++ b/css/style.css
@@ -161,7 +161,7 @@ input.search {
 	left: 0px;
 	width: 100%;
 	height: 100%;
-	z-index: 10;
+	z-index: 3000;
 	opacity: 0.5;
 	background-color: rgb(0, 0, 0);
 }
@@ -269,6 +269,9 @@ input.search {
 	height: 100vh;
 	overflow-y: scroll;
 }
+.padding_r{
+	padding-right: 1em;
+}
 .cont button.btn_write {
 	float:right;
 	width:142px;
@@ -308,7 +311,7 @@ div::-webkit-scrollbar,nav::-webkit-scrollbar,table::-webkit-scrollbar ,tbody::-
 }
 .table_wrap{
 	height: 87vh;
-	overflow-y: scroll;
+	overflow-y: hidden;
 }
 .table{
 	border:solid 1px #e5e5e5;
@@ -334,7 +337,7 @@ tr.row{
 .table thead th{
 	display: table;
 	text-align: center;
-	height: 3.7em;
+	height: 3.1em;
 	border: none;
 }
 .table thead th span{
@@ -348,37 +351,43 @@ tr.row{
 	height: 80vh;
 }
 .table_01 tbody{
-	height: calc( 87vh - 3.7em - 3px );
+	height: calc( 87vh - 3.1em - 3px );
 }
 .table_02 tbody{
 	height: calc( 85.7vh - 4.8em - 3px )
 }
-.table_02_s tbody{
-	height:37vh;
+table.table_02_s tbody{
+	height: calc( (85.7vh - 17.9em - 6px) / 2 );
+}
+table.table_cur tbody{
+	height: calc( (85.7vh - 10em - 6px) / 2 );
 }
 .table_03 tbody{
-	height: calc( 50vh - 6.6em - 3px );
-}
-.table_03_s tbody{
-	height: calc( 48.7vh - 7.5em - 3px );
+	height: calc( (85.7vh - 8em - 6px) / 2 );
 }
 .table tbody td{
 	display: table;
 	text-align: center;
-	height: 3.9em;
+	height: 3.3em;
 	border-top: none;
 }
 .table_01 thead tr{
 	border-bottom: 1px solid #e5e5e5;
 }
-.table_01 tbody tr:hover,.table_02 tbody tr:hover{
+table.table_01 tbody tr:hover,table.table_02 tbody tr:hover{
+	background-color: #e8fcfb;
+}
+.table_02 thead .column:hover{
+	background-color: #e8fcfb;
+}
+.table_02 thead .column:hover{
 	background-color: #e8fcfb;
 }
 .table span{
 	display: table-cell;
 	vertical-align: middle;
 	letter-spacing: -0.68px;
-	color: #2a2c2f;
+	color: #272b2f;
 }
 .table .txt_orange{
 	color: #ff6c00;
@@ -395,13 +404,35 @@ tr.row{
 	box-shadow: 0px .15em .3em 0 rgba(29, 157, 148, 0.3);
 	background-color: #05bcaf;
 	font-size: 1.3em;
+	padding-left: .5em;
+	padding-right: .5em;
+	border-bottom: 1px solid #05bcaf;
 }
 .thead_wrap .table_02 tr span{
-	letter-spacing: -1.13px;
-	color: #ffffff;
-}
-.thead_wrap .table_02 tr span.wait{
+	color: #fefeff;
 	font-weight: 400;
+	font-size: 1.1em;
+	word-break: keep-all;
+}
+.thead_wrap .table_02 tr th.txt_pre span{
+	font-weight: 700;
+}
+.thead_wrap .table_02 tr th.txt_pre_info{
+
+}
+.thead_wrap .table_02 tr th.txt_pre_info div{
+	display: table-cell;
+	vertical-align: middle;
+	text-align: center;
+}
+.thead_wrap .table_02 tr th.txt_pre_info div span{
+	display: block;
+}
+.thead_wrap .table_02 tr th.txt_pre_info div span.num_reg{
+	text-align: right;
+}
+.thead_wrap .table_02 tr th.txt_pre_info div span.num_age{
+	text-align: left;
 }
 .thead_wrap .table_02 .base span{
 	letter-spacing: -1px;
@@ -421,38 +452,76 @@ tr.row{
 	word-break: keep-all;
 }
 .table_03 tbody tr .column{
-	width: 16%;
-	border-radius: .5em;
-	background-color: #dedede;
-	margin: .3% .5%;
 	border:none;
 	height: 3em;
 	font-weight: 500;
  	letter-spacing: -0.68px;
   	text-align: center;
   	table-layout: fixed;
+}
+.table_03 tbody tr .column .column_box{
+	display: table;
+	table-layout: fixed;
+	margin: 0 auto;
+	border-radius: .5em;
+	/*background-color: rgba(239, 230, 215, .7);*/
+	background-color: #ffffff;
+	height: 3em;
   	padding: 0;
   	overflow: hidden;
 }
-.table_03 tbody tr .column:first-child{
-	margin-left: 0;
+/*ie용 bootstrap col 호환성 코드 & 반응형 colunm 너비 지정*/
+.table_03 tbody tr{
+	margin-left: -.2em;
+	margin-right: -.2em;
 }
-.table_03 tbody tr .column:last-child{
-	margin-right: 0;
+.table_03 tbody tr .column{
+	width: 12.5%;
+	margin: .3% 0 .15%;
 }
-.table_03 tbody tr .active{
-	background-color: #05bcaf;
+.table_03 tbody tr .column .column_box{
+	width: calc(100% - .4em);
 }
-.table_03 tbody tr .column span{
-	color: #5c5c5c;
+.table_02_s tbody tr .column{
+	width: 16.66666%;
+	margin: .39% 0;
+}
+.table_02_s tbody tr .column .column_box{
+	width: calc(100% - .5em);
+}
+.table_04 .row th.col-sm,
+.table_04 .row td.col-sm{
+	width: 12.5%;
+}
+/*ie용 bootstrap col 호환성 코드 & 반응형 colunm 너비 지정*/
+
+.table_03 tbody tr .column .column_box span{
+	display: table-cell;
+	vertical-align: middle;
+	color: #272b2f;
 	font-size: 1em;
 	word-break: keep-all;
 }
-.table_03 tbody tr .active span{
+.table_02_s tbody tr .column .column_box span{
+	font-size: .9em;
+}
+.table_03 tbody tr .column .active_chk{
+	background-color: #05bcaf;
+}
+.table_03 tbody tr .column .active_com{
+	background-color: #dedede;
+}
+.table_03 tbody tr .column .active_chk span{
 	color: #ffffff;
+}
+.table_03 tbody tr .column .active_com span{
+	color: #7b7f83;
 }
 .table_03 thead .row{
 	padding: .7em 0;
+}
+.table_03 thead .row_02{
+	padding: .9em 0 .5em;
 }
 .table_03 thead .row th{
 	height: 1em;
@@ -468,6 +537,8 @@ tr.row{
 	width: 1%;
 	font-weight: bold;
 	border-left: 5px solid #414d6b;
+	word-break: keep-all;
+	white-space: nowrap;
 }
 .table_03 thead .row .title span.name_list{
 	padding-left: 1em;
@@ -479,6 +550,8 @@ tr.row{
 .table_03 thead .row .title span.state{
 	text-align: left;
 	font-weight: 400;
+	word-break: keep-all;
+	white-space: nowrap;
 }
 .table_03 thead .row .sub_wrap{
 	text-align: right;
@@ -513,24 +586,27 @@ tr.row{
 .table_03 thead .row span.active{
 	color: #05bcaf;
 }
+.table_04 .ck_box{
+	display: table-cell;
+	vertical-align: middle;
+}
+.table_04 .ck_box .vip_chk{
+	width: 1.2em;
+	height: 1.5em;
+	vertical-align: middle;
+}
 .table_04 .column8{
 	table-layout: fixed;
+	padding-right: .3em;
 }
-/*ie용 bootstrap col 호환성 코드*/
-.table_03 .row td.col{
-	width: 19.2%;
+.table_04 .row th{
+	table-layout: fixed;
 }
-.table_04 .row th.col-sm,
-.table_04 .row td.col-sm{
-	width: 11.11111%;
-}
-/*ie용 bootstrap col 호환성 코드*/
 .arrive{
 	display: table-cell;
 	vertical-align: middle;
 	width: 100%;
 	text-align: center;
-	padding-right: .3em;
 }
 .arrive .chk_button{
 	width: 9em;
@@ -557,7 +633,12 @@ tr.row{
 .arrive .chk_button:active div{
 	color: #ffffff;
 }
-
+.table .col_blank{
+	display: none;
+}
+.table thead .col_blank:hover{
+	background-color: #f6f6f6;
+}
 .table .col_arr{
 	color: #019d95;
 	font-weight: bold;
@@ -617,14 +698,126 @@ tr.row{
 	padding: 0;
 	border: none;
 }
-.rem_wrap{
+.column_wrap{
 	margin: 0;
 	height: 100%;
 }
-.column_rem{
+.column_wrap div{
+	display: table;
 	text-align: center;
 	padding: 0;
 	color: #2a2c2f;
+	height: 100%;
+}
+.column_wrap div span{
+	text-align: center;
+	display: table-cell;
+	vertical-align: middle;
+}
+.popup_ins{
+	position: relative;
+	z-index: 1000;
+	margin-top: calc( (-85.7vh + 14.1em + 6px) / 2 );
+	width: 100%;
+}
+.popup_ins .popup_wrap{
+	background-color: #f7f5f0;
+	border-radius: .5em;
+	box-shadow:
+	 0 7px 5px -7px rgba(117, 95, 57, 0.077),
+	 0 17px 11px -13px rgba(117, 95, 57, 0.087),
+	 0 27px 23px -17px rgba(117, 95, 57, 0.091);
+	padding: 0 1em;
+	border: 3px solid #f3f2ef;
+	display: none;
+}
+.popup_ins .popup_wrap .table_02_s{
+	background-color: rgba( 255, 255, 255, 0 );
+}
+.popup_ins .popup_wrap .table_02_s thead{
+	background-color: rgba( 255, 255, 255, 0 );
+}
+.popup_ins .popup_wrap .table_02_s tbody{
+	height: calc( (85.7vh - 15.1em - 6px) / 2 );
+}
+.popup_ins .table_02_s tbody tr{
+	margin-left: -.25em;
+	margin-right: -.25em;
+}
+.close_wrap{
+	border: none;
+}
+tr.btn_close{
+	border-bottom: none;
+}
+.btn_close .th_txt{
+	font-size: 1.5em;
+	text-align: left;
+	padding-left: calc(.3rem + .2em + 5px);
+}
+.btn_close .ico_close{
+	width: 2.3em;
+	display: table-cell;
+	vertical-align: middle;
+	background: url('../images/close_icon_02.png') no-repeat center;
+	background-size: 70%;
+}
+div.col_none{
+	display: none;
+}
+.arr_popup{
+	width:90%;
+	/*height:100%;*/
+	max-width: 500px;
+	max-height: 580px;
+	background:#ffffff;
+	position:fixed;
+	top:50%;
+	left:50%;
+	z-index: 10000;
+	-webkit-transform: translate(-50%,-50%);
+	-moz-transform: translate(-50%,-50%);
+	-ms-transform: translate(-50%,-50%);
+	-o-transform: translate(-50%,-50%);
+	transform: translate(-50%,-50%);
+	overflow:hidden;
+	border-radius:1.5em;
+	box-shadow: 0px .5em 2em 0 rgba(0, 0, 0, 0.3);
+	display: none;
+}
+.arr_popup .btn_close{
+	float: right;
+	padding: .7em;
+}
+.arr_popup .btn_close .ico_close{
+	width: 3.5em;
+	height: 3.5em;
+}
+.arr_popup .arr_box{
+	text-align: center;
+}
+.arr_popup .arr_text{
+	display: block;
+    width: 80%;
+    height: 3em;
+    margin: 5em auto 0;
+    padding: .7em;
+    font-size: 2.1em;
+    font-weight: 700;
+    word-break: keep-all;
+    text-align: center;
+}
+.arr_popup .arr_yes{
+	width: 80%;
+    height: 2.3em;
+    margin: 5.7em auto 1.5em;
+    border: 0;
+    border-radius: 3em;
+    outline: none;
+    background: #00583d;
+    font-size: 1.9em;
+    font-weight: 700;
+    color: #ffffff;
 }
 
 /* list checkbox radio btn img */
@@ -653,13 +846,31 @@ tr.row{
 	.table_02{
 		font-size: 1.1em;
 	}
+	table.table_02_s tbody{
+		height: calc( (85.7vh - 18.2em - 6px) / 2 );
+	}
+	table.table_cur tbody{
+		height: calc( (85.7vh - 9em - 6px) / 2 );
+	}
+	.popup_ins{
+		margin-top: calc( (-85.7vh + 17.1em + 6px) / 2 );
+	}
+	.popup_ins .popup_wrap .table_02_s tbody{
+		height: calc( (85.7vh - 18.5em - 6px) / 2 );
+	}
+	.btn_close .th_txt{
+		padding-left: calc(.3rem + .29em + 5px);
+	}
+	.thead_wrap .table_02 tr span{
+		font-size: 1.05em;
+	}
 	.table_03 thead .row .title{
 		display: block;
 		padding: 0 .3rem;
 		padding-right: 100%;
 	}
 	.table_03 thead .row .title_01{
-		height: auto;
+		height: 1.5em;
 	}
 	.table_03 thead .row .status{
 		display: table-cell;
@@ -672,13 +883,32 @@ tr.row{
 		padding-top: .5em;
 	}
 	.table_03 tbody{
-		height: calc( 50vh - 8.5em - 3px );
+		height: calc( (85.7vh - 12em - 6px) / 2 );
 	}
-	.table_03_s tbody{
-		height: calc( 48.7vh - 9.4em - 3px );
+	/*ie용 bootstrap col 호환성 코드 & 반응형 colunm 너비 지정*/
+	.table_03 tbody tr{
+		margin-left: -.25em;
+		margin-right: -.25em;
 	}
-	.table_03 tbody tr .column span{
-		font-size: .87em;
+	.table_03 tbody tr .column{
+		width: 16.66666%;
+		margin: .39% 0;
+	}
+	.table_03 tbody tr .column .column_box{
+		width: calc(100% - .5em);
+	}
+	.table_02_s tbody tr .column{
+		width: 20%;
+	}
+	.table_02_s tbody tr .column .column_box{
+		width: calc(100% - .4em);
+	}
+	/*ie용 bootstrap col 호환성 코드 & 반응형 colunm 너비 지정*/
+	.table_03 tbody tr .column .column_box span{
+		font-size: 1.1em;
+	}
+	.table_02_s tbody tr .column .column_box span{
+		font-size: .9em;
 	}
 	.arrive .chk_button{
 		width: 7em;
@@ -688,6 +918,39 @@ tr.row{
 	}
 	.toggle_wrap .toggle_group button div{
 		font-size: 1.3em;
+	}
+}
+@media (max-width: 1070px) {
+	.table_02{
+		font-size: .93em;
+	}
+	table.table_02_s tbody{
+		height: calc( (85.7vh - 19.7em - 6px) / 2 );
+	}
+	table.table_cur tbody{
+		height: calc( (85.7vh - 7em - 6px) / 2 );
+	}
+	.table_03 tbody{
+		height: calc( (85.7vh - 14em - 6px) / 2 );
+	}
+	.popup_ins{
+		margin-top: calc( (-85.7vh + 16.3em + 6px) / 2 );
+	}
+	.popup_ins .popup_wrap .table_02_s tbody{
+		height: calc( (85.7vh - 17.1em - 6px) / 2 );
+	}
+	.btn_close .th_txt{
+		font-size: 1.7em;
+		padding-left: calc(.3rem + .31em + 5px);
+	}
+	.table_03 tbody tr .column .column_box span{
+		font-size: 1em;
+	}
+	.table_02_s tbody tr .column{
+		width: 25%;
+	}
+	.table_02_s tbody tr .column .column_box span{
+		font-size: .85em;
 	}
 }
 @media (max-width: 900px) {
@@ -739,7 +1002,7 @@ tr.row{
 	.lnb {
 		width:50%;
 		position: fixed;
-		z-index: 100;
+		z-index: 7000;
 		-webkit-transform: translateX(-130%);
 		-moz-transform: translateX(-130%);
 		-ms-transform: translateX(-130%);
@@ -780,7 +1043,7 @@ tr.row{
 		font-size: 1.39em;
 	}
 	.table_02{
-		font-size: 1em;
+		font-size: .95em;
 	}
 	.table_04{
 		font-size: 1.27em;
@@ -789,16 +1052,26 @@ tr.row{
 		height: calc( 87vh - 2.7em - 3px );
 	}
 	.table_02 tbody{
-		height: calc( 85.7vh - 4.3em - 3px )
+		height: calc( 85.7vh - 4.3em - 3px );
 	}
-	.table_02_s tbody{
-		height:37vh;
+	table.table_02_s tbody{
+		height: calc( (85.7vh - 19.4em - 6px) / 2 );
 	}
-	.table_03_s tbody{
-		height: calc( 48.7vh - 8.3em - 3px );
+	.popup_ins{
+		margin-top: calc( (-85.7vh + 17.7em + 6px) / 2 );
+	}
+	.popup_ins .popup_wrap .table_02_s tbody{
+		height: calc( (85.7vh - 16.5em - 6px) / 2 );
+	}
+	.btn_close .th_txt{
+		font-size: 1.9em;
+		padding-left: calc(.3rem + .33em + 5px);
 	}
 	.thead_wrap .table_02 tr{
 		font-size: 1.57em;
+	}
+	.thead_wrap .table_02 tr span{
+		font-size: 1em;
 	}
 	.table thead th{
 		height: 2.7em;
@@ -806,8 +1079,29 @@ tr.row{
 	.table tbody td{
 		height: 2.9em;
 	}
-	.table_03 tbody tr .column span{
-		font-size: .83em;
+	.table_03 tbody{
+		height: calc( (85.7vh - 6em - 6px) / 2 );
+	}
+	/*ie용 bootstrap col 호환성 코드 & 반응형 colunm 너비 지정*/
+	.table_03 tbody tr{
+		margin-left: -.2em;
+		margin-right: -.2em;
+	}
+	.table_03 tbody tr .column{
+		width: 20%;
+	}
+	.table_03 tbody tr .column .column_box{
+		width: calc(100% - .4em);
+	}
+	/*ie용 bootstrap col 호환성 코드 & 반응형 colunm 너비 지정*/
+	.table_03 tbody tr .column .column_box span{
+		font-size: 1em;
+	}
+	.table_02_s tbody tr .column{
+		width: 25%;
+	}
+	.table_02_s tbody tr .column .column_box span{
+		font-size: .87em;
 	}
 	.arrive .chk_button{
 		width: 5.9em;
@@ -835,10 +1129,22 @@ tr.row{
 		height:35.7vh;
 	}
 	.table_03 tbody{
-		height:auto;
+		height: calc( (85.7vh - 13em - 6px) / 2 );
 	}
 	.table_02{
 		font-size: 1.23em;
+	}
+	table.table_02_s tbody{
+		height: calc( (85.7vh - 9em - 6px) / 2 );
+	}
+	.table_03 tbody tr .column .column_box span{
+		font-size: .93em;
+	}
+	.table_02_s tbody tr .column{
+		width: 20%;
+	}
+	.table_02_s tbody tr .column .column_box span{
+		font-size: .93em;
 	}
 	.table_04{
 		font-size: 1.13em;
@@ -858,6 +1164,16 @@ tr.row{
 	}
 	.arrive .chk_button{
 		width: 5em;
+	}
+	.popup_ins{
+		margin-top: calc( (-85.7vh + .9em + 6px) / 2 );
+	}
+	.popup_ins .popup_wrap .table_02_s tbody{
+		height: calc( (85.7vh - 7.3em - 6px) / 2 );
+	}
+	.btn_close .th_txt{
+		font-size: 1.5em;
+		padding-left: calc(.3rem + .3em + 5px);
 	}
 }
 @media (max-width: 730px) {
@@ -935,6 +1251,9 @@ tr.row{
 	.thead_wrap .table_02 tr{
 		font-size: 1.5em;
 	}
+	.thead_wrap .table_02 tr span{
+		font-size: .95em;
+	}
 	.table thead th{
 		height: 2.1em;
 	}
@@ -952,6 +1271,16 @@ tr.row{
 	}
 	.arrive .chk_button{
 		padding:.1em 0;
+	}
+	.popup_ins{
+		margin-top: calc( (-85.7vh + 1.5em + 6px) / 2 );
+	}
+	.popup_ins .popup_wrap .table_02_s tbody{
+		height: calc( (85.7vh - 7.5em - 6px) / 2 );
+	}
+	.btn_close .th_txt{
+		font-size: 1.5em;
+		padding-left: calc(.3rem + .2em + 5px);
 	}
 }
 @media (max-width: 575px) {
@@ -990,14 +1319,40 @@ tr.row{
 	tr.row{
 		border-bottom: none;
 	}
-	.table_02 tbody tr:nth-child(2n){
-		background-color: #e8fcfb;
+	table.table_02_s tbody{
+		height: calc( (85.7vh - 3em - 6px) / 2 );
 	}
-	.table_03 tbody tr .column span{
-		font-size: .8em;
+	.table_02 tbody tr:nth-child(2n){
+		background-color: #f7fbfb;
+	}
+	.table_03 tbody{
+		height: calc( (85.7vh - 7em - 6px) / 2 );
+	}
+	/*ie용 bootstrap col 호환성 코드 & 반응형 colunm 너비 지정*/
+	.table_03 tbody tr{
+		margin-left: -.15em;
+		margin-right: -.15em;
+	}
+	.table_03 tbody tr .column{
+		width: 25%;
+		margin: .7% 0;
+	}
+	.table_03 tbody tr .column .column_box{
+		width: calc(100% - .3em);
+	}
+	.table_04 .row th.col-3,
+	.table_04 .row td.col-3{
+		width: 25%;
+	}
+	/*ie용 bootstrap col 호환성 코드 & 반응형 colunm 너비 지정*/
+	.table_03 tbody tr .column .column_box span{
+		font-size: .93em;
+	}
+	.table_02_s tbody tr .column .column_box span{
+		font-size: .93em;
 	}
 	.table_04 tbody tr:nth-child(2n){
-		background-color: #e8fcfb;
+		background-color: #f7fbfb;
 	}
 	.toggle_wrap .toggle_group button{
 		height: 2.3em;
@@ -1008,6 +1363,9 @@ tr.row{
 	.table .w-100{
 		display: block;
 	}
+	.table .col_blank{
+		display: block;
+	}
 	/*ie용 bootstrap col 호환성 코드*/
 	.table_04 .row th.col-4,
 	.table_04 .row td.col-4{
@@ -1015,9 +1373,26 @@ tr.row{
 	}
 	.table_04 .row th.col,
 	.table_04 .row td.col{
-		width: 20%;
+		width: 25%;
 	}
 	/*ie용 bootstrap col 호환성 코드*/
+	.popup_ins{
+		margin-top: calc( (-85.7vh - 9.5em + 6px) / 2 );
+	}
+	.popup_ins .popup_wrap .table_02_s tbody{
+		height: calc( (85.7vh + 1.5em - 6px) / 2 );
+	}
+	div.col_none{
+		display: -webkit-flex;
+	    display: -ms-flexbox;
+	    display: flex;
+	}
+	.arr_popup .arr_text{
+	    font-size: 1.7em;
+	}
+	.arr_popup .arr_yes{
+	    margin: 3em auto 1.5em;
+	}
 }
 @media (max-width: 450px) {
 	.logo_wrap{
@@ -1045,4 +1420,26 @@ tr.row{
 		width: 100%;
 		margin-top: -30%;
 	} */
+	.thead_wrap .table_02 tr span{
+		font-size: .8em;
+	}
+	.table_03 tbody tr .column .column_box span{
+		font-size: .9em;
+	}
+	.table_02_s tbody tr .column .column_box span{
+		font-size: .9em;
+	}
+}
+@media (max-width: 400px) {
+	.thead_wrap .table_02 tr span{
+		font-size: .73em;
+	}
+}
+@media (max-width: 350px) {
+	.thead_wrap .table_02 tr span{
+		font-size: .71em;
+	}
+	.arr_popup .arr_text{
+	    font-size: 1.5em;
+	}
 }
